--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "~11.2.12",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.2.12",
     "@angular/compiler": "~11.2.12",
     "@angular/core": "~11.2.12",
     "@angular/forms": "~11.2.12",
+    "@angular/google-maps": "^12.0.2",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
+    "@angular/service-worker": "~11.2.12",
+    "@types/googlemaps": "^3.43.3",
+    "angular-notifier": "^9.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
